# cockroach

./: DEPS.bzl  ICEBERG_PLAN.md  go.mod  go.sum
pkg/: BUILD.bazel
pkg/ccl/backupccl/: system_schema.go
pkg/ccl/changefeedccl/: BUILD.bazel  changefeed_dist.go  changefeed_processors.go  changefeed_stmt.go  changefeed_test.go  encoder_json.go  event_processing.go  fetch_table_bytes.go  fetch_table_bytes_test.go  helpers_test.go  iceberg_partition_eval.go  iceberg_partition_spec.go  iceberg_util.go  metrics.go  nemeses_test.go  protected_timestamps.go  protected_timestamps_test.go  show_changefeed_jobs_test.go  sink.go  sink_cloudstorage.go  sink_iceberg.go  sink_iceberg_test.go  sink_kafka_connection_test.go  sink_kafka_v2.go  sink_kafka_v2_test.go  testfeed_test.go
pkg/ccl/changefeedccl/cdctest/: validator.go
pkg/ccl/changefeedccl/changefeedbase/: options.go  settings.go
pkg/ccl/changefeedccl/kafkaauth/: BUILD.bazel  sasl_proprietary_oauth.go
pkg/ccl/changefeedccl/kcjsonschema/: kafka_connect_json_schema.go
pkg/ccl/changefeedccl/kvfeed/: kv_feed.go  physical_kv_feed.go
pkg/ccl/changefeedccl/mocks/: BUILD.bazel  internal_rows.go  querier.go
pkg/ccl/changefeedccl/tableset/: BUILD.bazel  tableset.go  tableset_test.go
pkg/ccl/changefeedccl/timers/: BUILD.bazel  timers.go
pkg/cli/clisqlclient/: conn.go
pkg/cmd/roachtest/: cluster.go
pkg/cmd/roachtest/tests/: cdc.go  cdc_bench.go  mixed_version_cdc.go
pkg/jobs/: adopt.go  testing_knobs.go
pkg/roachprod/install/: cluster_synced.go
pkg/server/: server_sql.go
pkg/sql/: conn_executor.go  listen.go  planner.go  table.go  unlisten.go  user.go
pkg/sql/catalog/bootstrap/: metadata.go
pkg/sql/catalog/catprivilege/: system.go
pkg/sql/catalog/systemschema/: system.go
pkg/sql/delegate/: notify.go
pkg/sql/distsql/: server.go
pkg/sql/execinfrapb/: processors_changefeeds.proto
pkg/sql/notify/: registry.go
pkg/sql/pgwire/: conn_test.go
pkg/sql/queuefeed/: manager.go  partitions.go  reader.go
pkg/sql/sem/builtins/: BUILD.bazel  builtins.go  fixed_oids.go
pkg/sql/sem/catconstants/: constants.go
pkg/upgrade/upgrades/: upgrades.go  v24_3_listen_notify_queue.go
pkg/util/log/: file.go
