load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tableset",
    srcs = ["tableset.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/ccl/changefeedccl/tableset",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ccl/changefeedccl/cdcevent",
        "//pkg/ccl/changefeedccl/changefeedbase",
        "//pkg/jobs/jobspb",
        "//pkg/kv",
        "//pkg/kv/kvclient/rangefeed",
        "//pkg/kv/kvpb",
        "//pkg/roachpb",
        "//pkg/sql",
        "//pkg/sql/catalog/catalogkeys",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/catalog/systemschema",
        "//pkg/sql/sem/tree",
        "//pkg/util/hlc",
        "//pkg/util/mon",
        "//pkg/util/span",
        "//pkg/util/tracing",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_cockroachdb_logtags//:logtags",
    ],
)

go_test(
    name = "tableset_test",
    srcs = [
        "main_test.go",
        "tableset_test.go",
    ],
    embed = [":tableset"],
    deps = [
        "//pkg/base",
        "//pkg/security/securityassets",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/mon",
        "//pkg/util/timeutil",
        "@com_github_cockroachdb_crlib//testutils/require",
        "@com_github_cockroachdb_gostdlib//x/sync/errgroup",
    ],
)
